# Mikan-Downloader

./: .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
core/: config.py  downloader.py  fs.py  mikan_search.py  renamer.py  scheduler.py
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CronGenerator.vue  CronUnitTab.vue  SearchDialog.vue
frontend/src/pages/: Activity.vue  Dashboard.vue  History.vue  Library.vue  Notifications.vue  Schedule.vue  Settings.vue
src/mikan_downloader/: app.py
src/mikan_downloader/api/: activity.py  history.py  library.py  mikan.py  notifications.py  scheduler.py  settings.py
src/mikan_downloader/core/: activity.py  config.py  downloader.py  notifications.py  renamer.py  scheduler.py  search.py
src/mikan_downloader/db/: database.py  models.py
